# z-grid

./: z-grid.pen
.github/workflows/: deploy-z-grid.yml
backend/: .gitignore  Dockerfile  HELP.md  build.gradle  docker-compose.yml
frontend/: .prettierrc.json  Dockerfile  angular.json  package-lock.json  package.json  ui-research.md
frontend/src/: styles.css
frontend/src/app/: app.config.ts  app.css  app.html  app.spec.ts  (+2 more)
infra/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  py-engine-deployment.yaml  py-engine-service.yaml
py-engine/: .gitignore  Dockerfile  README.md  pyproject.toml
py-engine/hosting_capacity/requirements/: HC_algorithm_spec.md  HC_requirements.md
py-engine/src/py_engine/: main.py
py-engine/src/py_engine/api/: routes.py  schemas.py
py-engine/src/py_engine/core/: config.py  exceptions.py
py-engine/src/py_engine/engines/: registry.py
py-engine/src/py_engine/engines/hosting_capacity/: __init__.py  constraints.py  engine.py  models.py
py-engine/src/py_engine/engines/power_quality/: __init__.py  core.py  engine.py
py-engine/src/py_engine/engines/powerflow/: __init__.py  engine.py  mapper.py  models.py  solver.py
py-engine/src/py_engine/engines/short_circuit/: __init__.py  engine.py
py-engine/tests/contract/: test_response_contract.py
py-engine/tests/integration/: test_api_execute.py
py-engine/tests/performance/: test_large_grid_smoke.py
py-engine/tests/unit/: test_hosting_capacity.py  test_power_quality_engine.py  test_powerflow_solver.py
(+295 files in other folders)
