[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "py-engine"
version = "0.1.0"
description = "Python simulation engine service for Zeus."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "numpy>=2.3.0",
  "pandapower>=2.14.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.11.0",
  "scipy>=1.16.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "pytest-benchmark>=5.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/py_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
